--- a/app/globals.css
+++ b/app/globals.css
@@ -51,15 +51,15 @@
 }
 
 .hero__image-container {
-  @apply xl:flex-[1.5] flex justify-end items-end w-full xl:h-screen;
+  @apply xl:flex-[1.5] flex justify-end items-end w-screen xl:h-screen;
 }
 
 .hero__image {
-  @apply relative xl:w-full w-[90%] xl:h-full h-[590px] z-0;
+  @apply relative xl:block xl:w-[650px] xl:mt-16 w-[90%] xl:h-full h-[590px] z-0;
 }
 
 .hero__image-overlay {
-  @apply absolute xl:-top-24 lg:-right-1/2 -right-1/4 bg-hero-bg bg-repeat-round -z-10 w-full xl:h-screen h-[590px] overflow-hidden;
+  @apply absolute xl:-top-24 lg:-right-1/2 -right-1/4 bg-hero-bg bg-repeat-round -z-10 w-full xl:h-screen h-[500px] overflow-hidden;
 }
 /* END: Hero styles */
 
